--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -33,3 +33,21 @@ jobs:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
+
+  web-deploy:
+      name: 🎉 Deploy
+
+      runs-on: ubuntu-latest
+
+      steps:
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v2.3.2
+
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        with:
+          server: ${{ secrets.SERVER }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          server-dir: ${{ secrets.SERVER_DIR }}
+          exclude:
