--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  laravel-tests:
+  laravel-tests-and-deploy:
 
     runs-on: ubuntu-latest
 
@@ -34,20 +34,19 @@ jobs:
         DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
 
-  web-deploy:
-      name: 🎉 Deploy
+      name: Deploy
 
       runs-on: ubuntu-latest
 
       steps:
-      - name: 🚚 Get latest code
+      - name: Get latest code
         uses: actions/checkout@v2.3.2
 
-      - name: 📂 Sync files
+      - name: Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
           server: ${{ secrets.SERVER }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           server-dir: ${{ secrets.SERVER_DIR }}
-          exclude:
+          exclude: ~
