--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -33,6 +33,7 @@ jobs:
 
 
   build:
+    needs: laravel-tests
 
     runs-on: ubuntu-latest
 
@@ -51,6 +52,8 @@ jobs:
 
 
   deploy:
+    needs: build
+
     runs-on: ubuntu-latest
 
     steps:
