--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.15.2"
+        "@fortawesome/fontawesome-free": "^5.15.2",
+        "vuetify": "^2.4.5"
     }
 }
