--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -31,34 +31,20 @@ jobs:
         DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
 
-
-  build:
+  deploy:
     needs: laravel-tests
 
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v2-beta
-        with:
-          node-version: '12'
-          check-latest: true
-      - name: Install NPM dependencies
-        run: npm install
-      - name: Compile assets for production
-        run: npm run production
-
-
-  deploy:
-    needs: build
-
-    runs-on: ubuntu-latest
-
-    steps:
     - name: Get latest code
-      uses: actions/checkout@v2.3.2
+      uses: actions/checkout@v2
+
+    # - name: Install Composer Dependencies
+    #   run: composer install --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
+
+    - name: Install Node.js dependencies and minifies JS/CSS files
+      run: npm install && npm run prod
 
     - name: Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
@@ -67,3 +53,4 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         server-dir: ${{ secrets.SERVER_DIR }}
+        log-level: minimal
