--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -54,3 +54,60 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         server-dir: ${{ secrets.SERVER_DIR }}
         log-level: minimal
+        exclude: .git*
+          - .git*/**
+          -  **/.git*/**
+          - README.md
+          - composer*.json
+          - package*.json
+          - phpunit.xml
+          - node_modules/@*
+          - node_modules/a*
+          - node_modules/b*
+          - node_modules/c*
+          - node_modules/d*
+          - node_modules/e*
+          - node_modules/f*
+          - node_modules/g*
+          - node_modules/h*
+          - node_modules/i*
+          - node_modules/j*
+          - node_modules/k*
+          - node_modules/l*
+          - node_modules/m*
+          - node_modules/n*
+          - node_modules/o*
+          - node_modules/p*
+          - node_modules/q*
+          - node_modules/r*
+          - node_modules/s*
+          - node_modules/t*
+          - node_modules/u*
+          - node_modules/v*
+          - node_modules/w*
+          - node_modules/x*
+          - node_modules/@*
+          - vendor/a*
+          - vendor/b*
+          - vendor/c*
+          - vendor/d*
+          - vendor/e*
+          - vendor/f*
+          - vendor/g*
+          - vendor/h*
+          - vendor/i*
+          - vendor/j*
+          - vendor/k*
+          - vendor/l*
+          - vendor/m*
+          - vendor/n*
+          - vendor/o*
+          - vendor/p*
+          - vendor/q*
+          - vendor/r*
+          - vendor/s*
+          - vendor/t*
+          - vendor/u*
+          - vendor/v*
+          - vendor/w*
+          - vendor/x*
