--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -40,9 +40,6 @@ jobs:
     - name: Get latest code
       uses: actions/checkout@v2
 
-    - name: Install Composer Dependencies
-      run: composer install --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
-
     - name: Install Node.js dependencies and minifies JS/CSS files
       run: npm install && npm run prod
 
@@ -53,61 +50,12 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         server-dir: ${{ secrets.SERVER_DIR }}
-        log-level: minimal
         exclude: .git*
           - .git*/**
           -  **/.git*/**
+          - node_modules/**
+          - node_modules/**/*
           - README.md
+          - phpunit.xml
           - composer*.json
           - package*.json
-          - phpunit.xml
-          - node_modules/@*
-          - node_modules/a*
-          - node_modules/b*
-          - node_modules/c*
-          - node_modules/d*
-          - node_modules/e*
-          - node_modules/f*
-          - node_modules/g*
-          - node_modules/h*
-          - node_modules/i*
-          - node_modules/j*
-          - node_modules/k*
-          - node_modules/l*
-          - node_modules/m*
-          - node_modules/n*
-          - node_modules/o*
-          - node_modules/p*
-          - node_modules/q*
-          - node_modules/r*
-          - node_modules/s*
-          - node_modules/t*
-          - node_modules/u*
-          - node_modules/v*
-          - node_modules/w*
-          - node_modules/x*
-          - node_modules/@*
-          - vendor/a*
-          - vendor/b*
-          - vendor/c*
-          - vendor/d*
-          - vendor/e*
-          - vendor/f*
-          - vendor/g*
-          - vendor/h*
-          - vendor/i*
-          - vendor/j*
-          - vendor/k*
-          - vendor/l*
-          - vendor/m*
-          - vendor/n*
-          - vendor/o*
-          - vendor/p*
-          - vendor/q*
-          - vendor/r*
-          - vendor/s*
-          - vendor/t*
-          - vendor/u*
-          - vendor/v*
-          - vendor/w*
-          - vendor/x*
