--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Init Elastic Beanstalk cli
         uses: hmanzur/actions-aws-eb@v1.0.0
         with:
-          command: 'deploy Poestats-env'
+          command: 'eb init && deploy Poestats-env'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
