--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -77,6 +77,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: "ap-northeast-1"
+      - name: Deploy
         run: |
           eb init
           deploy Poestats-env
