--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -72,12 +72,8 @@ jobs:
       - name: Init Elastic Beanstalk cli
         uses: hmanzur/actions-aws-eb@v1.0.0
         with:
-          command: ''
+          command: 'deploy Poestats-env'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: "ap-northeast-1"
-      - name: Deploy
-        run: |
-          eb init
-          deploy Poestats-env
