--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -66,14 +66,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v2
+    - name: Checkout source code
+      uses: actions/checkout@v1
 
-      - name: Init Elastic Beanstalk cli
-        uses: hmanzur/actions-aws-eb@v1.0.0
-        with:
-          command: 'deploy Poestats-env'
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: "ap-northeast-1"
+    - name: Generate deployment package
+      run: zip -r deploy.zip . -x "*.git*"
+
+    - name: Deploy to EB
+      uses: einaregilsson/beanstalk-deploy@v16
+      with:
+        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        application_name: poe-stats
+        environment_name: Poestats-env
+        use_existing_version_if_available: true
+        version_label: 1.0.0
+        region: ap-northeast-1
+        deployment_package: deploy.zip
