--- a/.ebextensions/01_setup.config
+++ b/.ebextensions/01_setup.config
@@ -1,35 +1,11 @@
-packages:
-    yum:
-        git: []
-# Set composer folder for this command and update
-commands:
-   01_updateComposer:
-      command: export COMPOSER_HOME=/root && /usr/bin/composer.phar self-update
-   02_node_install:
-        cwd: /tmp
-        test: '[ ! -f /usr/bin/node ] && echo "node not installed"'
-        command: 'yum install -y nodejs --enablerepo=epel'
-   03_npm_install:
-        cwd: /tmp
-        test: '[ ! -f /usr/bin/npm ] && echo "npm not installed"'
-        command: 'curl -L http://npmjs.org/install.sh | sh'
-   04_node_update:
-        cwd: /tmp
-        test: '[ ! -f /usr/bin/n ] && echo "node not updated"'
-        command: 'npm install -g n && n stable'
-option_settings:
-   # Add environment variable to set composer home folder
-   - namespace: aws:elasticbeanstalk:application:environment
-     option_name: COMPOSER_HOME
-     value: /root
-
-   # update php.ini file with new document root and specific composer --no-dev
-   - namespace: aws:elasticbeanstalk:container:php:phpini
-     option_name: document_root
-     value: /public
-   - namespace: aws:elasticbeanstalk:container:php:phpini
-     option_name: composer_options
-     value: --no-dev --no-interaction --prefer-dist --optimize-autoloader
-#container_commands:
-#   01_optimize:
-#      command: "/usr/bin/composer.phar dump-autoload --optimize"
+container_commands:
+    01_install_gcc:
+      command: 'yum install -y gcc-c++ make'
+    02_download_node:
+      command: "curl -sL https://rpm.nodesource.com/setup_6.x | bash -E"
+    03_install_node:
+      command: 'yum install -y nodejs'
+    04_install_node_modules:
+      command: 'npm install --save-dev cross-env'
+    05_run_production:
+      command: 'npm run production'
