--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -7,61 +7,61 @@ on:
     branches: [ master ]
 
 jobs:
-  laravel-tests:
+  # laravel-tests:
 
-    runs-on: ubuntu-latest
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: vendor/bin/phpunit
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Copy .env
+  #     run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+  #   - name: Install Dependencies
+  #     run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+  #   - name: Generate key
+  #     run: php artisan key:generate
+  #   - name: Directory Permissions
+  #     run: chmod -R 777 storage bootstrap/cache
+  #   - name: Create Database
+  #     run: |
+  #       mkdir -p database
+  #       touch database/database.sqlite
+  #   - name: Execute tests (Unit and Feature tests) via PHPUnit
+  #     env:
+  #       DB_CONNECTION: sqlite
+  #       DB_DATABASE: database/database.sqlite
+  #     run: vendor/bin/phpunit
 
-  deploy-lionfree:
-    needs: laravel-tests
+  # deploy-lionfree:
+  #   needs: laravel-tests
 
-    runs-on: ubuntu-latest
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - name: Get latest code
-      uses: actions/checkout@v2
+  #   steps:
+  #   - name: Get latest code
+  #     uses: actions/checkout@v2
 
-    - name: Install Node.js dependencies and minifies JS/CSS files
-      run: npm install && npm run prod
+  #   - name: Install Node.js dependencies and minifies JS/CSS files
+  #     run: npm install && npm run prod
 
-    - name: Sync files
-      uses: SamKirkland/FTP-Deploy-Action@4.0.0
-      with:
-        server: ${{ secrets.SERVER }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        server-dir: ${{ secrets.SERVER_DIR }}
-        exclude: .git*
-          - .git*/**
-          -  **/.git*/**
-          - node_modules/**
-          - node_modules/**/*
-          - README.md
-          - phpunit.xml
-          - composer*.json
-          - package*.json
+  #   - name: Sync files
+  #     uses: SamKirkland/FTP-Deploy-Action@4.0.0
+  #     with:
+  #       server: ${{ secrets.SERVER }}
+  #       username: ${{ secrets.USERNAME }}
+  #       password: ${{ secrets.PASSWORD }}
+  #       server-dir: ${{ secrets.SERVER_DIR }}
+  #       exclude: .git*
+  #         - .git*/**
+  #         -  **/.git*/**
+  #         - node_modules/**
+  #         - node_modules/**/*
+  #         - README.md
+  #         - phpunit.xml
+  #         - composer*.json
+  #         - package*.json
 
   deploy-aws-elastic-beanstalk:
-    needs: laravel-tests
+    # needs: laravel-tests
 
     runs-on: ubuntu-latest
 
