chore: 👷 修正 CI/CD 流程

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -80,6 +80,6 @@ jobs:
         application_name: poe-stats
         environment_name: Poestats-env
         use_existing_version_if_available: true
-        version_label: 1.0.0
+        version_label: ${{github.SHA}}
         region: ap-northeast-1
         deployment_package: deploy.zip
