--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -80,7 +80,7 @@ jobs:
         application_name: poe-stats
         environment_name: Poestats-env
         use_existing_version_if_available: true
-        version_label: 1.0.0
+        # version_label: 1.0.0
         version_description: ${{ github.SHA }}
         region: ap-northeast-1
         deployment_package: deploy.zip
