--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -70,7 +70,7 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Generate deployment package
-      run: zip -r deploy.zip . -x "*.git*"
+      run: zip -r ${{ github.SHA }}.zip . -x "*.git*"
 
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v16
@@ -82,4 +82,4 @@ jobs:
         use_existing_version_if_available: true
         version_label: 1.0.0
         region: ap-northeast-1
-        deployment_package: deploy.zip
+        deployment_package: ${{ github.SHA }}.zip
