chore: 👷 修正 CI/CD 流程

--- a/.ebextensions/composer.config
+++ b/.ebextensions/composer.config
@@ -1,3 +1,7 @@
 option_settings:
   aws:elasticbeanstalk:container:php:phpini:
     document_root: /public
+
+container_commands:
+  01installPHPdep:
+    command: "composer install"
