--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -91,7 +91,7 @@ jobs:
       run: npm run production
 
     - name: Generate deployment package
-      run: zip -r deploy.zip * -x "**node_modules**" "**.git**"
+      run: zip -r deploy.zip * -x "**.git**" "**node_modules**"
 
     - name: Get timestamp
       uses: gerred/actions/current-time@master
@@ -116,6 +116,3 @@ jobs:
         region: ap-northeast-1
         version_label: "my-app-${{ steps.format-time.outputs.replaced }}"
         deployment_package: deploy.zip
-
-    - name: Deployed!
-      run: echo App deployed to ELB
