--- a/.ebextensions/php-settings.config
+++ b/.ebextensions/php-settings.config
@@ -1,11 +1,6 @@
-files:
-  "/etc/php.d/project.ini" :
-    mode: "000644"
-    owner: root
-    group: root
-    content: |
-      document_root = /public
-      memory_limit = 512M
-      zlib.output_compression = On
-      allow_url_fopen = On
-      display_errors = Off
+option_settings:
+  aws:elasticbeanstalk:environment:proxy:
+    ProxyServer: apache
+  aws:elasticbeanstalk:container:php:phpini:
+    document_root: /public
+    memory_limit: 512M
