--- a/.ebextensions/command.config
+++ b/.ebextensions/command.config
@@ -1,4 +1,6 @@
 option_settings:
+  aws:elasticbeanstalk:container:nodejs:
+    NodeCommand: "npm install && npm run production"
   aws:elasticbeanstalk:environment:proxy:
     ProxyServer: apache
   aws:elasticbeanstalk:container:php:phpini:
