--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -61,35 +61,58 @@ jobs:
           - package*.json
 
   deploy-aws-elastic-beanstalk:
-    needs: laravel-tests
+      needs: laravel-tests
 
-    runs-on: ubuntu-latest
+      runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          node-version: [14.15.5]
 
-    steps:
-    - uses: actions/checkout@v1
-    - name: Generate deployment package
-      run: zip -r deploy.zip * -x "**.git**" "**node_modules**"
+      steps:
+      - uses: actions/checkout@v1
 
-    - name: Get timestamp
-      uses: gerred/actions/current-time@master
-      id: current-time
+      - name: Cache node modules
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+  #
+      - name: Node ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Run string replace
-      uses: frabert/replace-string-action@master
-      id: format-time
-      with:
-        pattern: '[:\.]+'
-        string: "${{ steps.current-time.outputs.time }}"
-        replace-with: '-'
-        flags: 'g'
+      - name: Installing NPM
+        run: npm install
 
-    - name: Beanstalk Deploy for app
-      uses: einaregilsson/beanstalk-deploy@v16
-      with:
-        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: poe-stats
-        environment_name: Poestats-env
-        region: ap-northeast-1
-        version_label: "my-app-${{ steps.format-time.outputs.replaced }}"
-        deployment_package: deploy.zip
+      - name: Building application
+        run: npm run production
+
+      - name: Generate deployment package
+        run: zip -r deploy.zip * -x "**.git**" "**node_modules**"
+
+      - name: Get timestamp
+        uses: gerred/actions/current-time@master
+        id: current-time
+
+      - name: Run string replace
+        uses: frabert/replace-string-action@master
+        id: format-time
+        with:
+          pattern: '[:\.]+'
+          string: "${{ steps.current-time.outputs.time }}"
+          replace-with: '-'
+          flags: 'g'
+
+      - name: Beanstalk Deploy for app
+        uses: einaregilsson/beanstalk-deploy@v16
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: poe-stats
+          environment_name: Poestats-env
+          region: ap-northeast-1
+          version_label: "my-app-${{ steps.format-time.outputs.replaced }}"
+          deployment_package: deploy.zip
