--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -41,7 +41,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install Node.js dependencies and minifies JS/CSS files
-      run: npm install && npm run prod
+      run: npm install && npm run production
 
     - name: Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
